--- a/index.html
+++ b/index.html
@@ -1,174 +1,3 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grameira São Francisco</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f7fff5;
-      color: #333;
-    }
-
-    header {
-      background-color: #4caf50;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #388e3c;
-      text-align: center;
-      padding: 1rem;
-    }
-
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #2e7d32;
-    }
-
-    .produtos ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .produtos li {
-      background: #e8f5e9;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-left: 5px solid #66bb6a;
-    }
-
-    .contato p {
-      margin: 5px 0;
-    }
-
-    footer {
-      background-color: #2e7d32;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-    }
-
-    @media (max-width: 600px) {
-      nav {
-        font-size: 14px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Grameira São Francisco</h1>
-    <p>A qualidade que seu jardim merece!</p>
-  </header>
-
-  <nav>
-    <a href="#sobre">Sobre</a>
-    <a href="#produtos">Produtos</a>
-    <a href="#contato">Contato</a>
-  </nav>
-
-  <section id="sobre">
-    <h2>Quem Somos</h2>
-    <p>
-      A Grameira São Francisco é especializada no cultivo e venda de gramas Esmeralda de alta qualidade.
-      Atendemos residências, empresas, condomínios e obras em geral, sempre com agilidade, compromisso
-      e os melhores preços da região.
-    </p>
-    <ul>
-      <li>🌱 Desde 1999 no mercado</li>
-      <li>🚚 Entregamos para todo o Brasil</li>
-      <li>👨‍🌾 Atendimento personalizado</li>
-    </ul>
-  </section>
-
-  <section id="produtos" class="produtos">
-    <h2>Nossos Produtos</h2>
-    <ul>
-      <li><strong>Grama Esmeralda</strong> – Ideal para jardins residenciais</li>
-    </ul>
-    <p>*Consulte disponibilidade e preços*</p>
-  </section>
-
-  <section id="contato" class="contato">
-    <h2>Contato</h2>
-    <p>📱 WhatsApp: <a href="https://wa.me/5515997708587">(15) 99770-8587</a></p>
-    <p>📧 E-mail: <a href="mailto:grameirasf@gmail.com?subject=Solicitação%20de%20Orçamento&body=Olá,%20gostaria%20de%20um%20orçamento%20de%20grama.%0A%0AQuantidade%20(m²):%20%0AData%20limite%20para%20entrega:%20%0ALocal%20de%20entrega%20(endereço%20completo):%20%0A%0AMuito%20obrigado!">grameirasf@gmail.com</a></p>
-    <p>🕒 Atendimento: Segunda a sábado, das 8h às 17h</p>
-    <p>📍 Endereço: Estrada Vicinal Angatuba-Itapetininga, Bairro Faxinal, Angatuba/SP</p>
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8700.057004553002!2d-48.26121797736635!3d-23.53525826963133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c42500637acb2d%3A0xe785cd5c366e633f!2zU8OtdGlvIFPDo28gRnJhbmNpc2Nv!5e0!3m2!1sen!2sno!4v1750925988845!5m2!1sen!2sno" 
-      width="600" 
-      height="450" 
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy" 
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Grameira São Francisco. Todos os direitos reservados.</p>
-  </footer>
-
-  <!-- Botão Flutuante do WhatsApp com Texto -->
-<a href="https://wa.me/5515997708587" target="_blank" class="whatsapp-button">
-  <img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="WhatsApp" />
-  <span>Fale conosco</span>
-</a>
-
-<style>
-  .whatsapp-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #25d366;
-    color: white;
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 50px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-    transition: background-color 0.3s, transform 0.2s;
-  }
-
-  .whatsapp-button:hover {
-    background-color: #1ebe5d;
-    transform: scale(1.05);
-  }
-
-  .whatsapp-button img {
-    width: 28px;
-    height: 28px;
-  }
-
-  @media (max-width: 500px) {
-    .whatsapp-button span {
-      display: none; /* Mostra só o ícone em telas pequenas */
-    }
-  }
-</style>
-
-
-</body>
+<html trdyrd>
 </html>
