--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow">
   <title>Grameira São Francisco</title>
   <style>
     body {
@@ -89,7 +90,7 @@
     <p>
       A Grameira São Francisco é especializada no cultivo e venda de gramas Esmeralda de alta qualidade.
       Atendemos residências, empresas, condomínios e obras em geral, sempre com agilidade, compromisso
-      e os melhores preços da região.
+      e os melhores preços em Angatuba e região.
     </p>
     <ul>
       <li>🌱 Desde 1999 no mercado</li>
